maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:21: error: not found: value sortieTrouvee
}while(!sortieTrouvee())
        ^